--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<!--- ICS2O-PWA-Test --->
+<!--- ICS2O-Unit3-01 --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first PWA" />
+    <meta name="description" content="unit 3-01 test" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Liya-Getachew" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>GitHub page as PWA template</title>
-    <link
-      rel="canonical"
-      href="https://github.com/Liya-Getachew/ICS2O-PWA-Test"
-    />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="canonical" href="https://github.com/Liya-Getachew/ICS2O-Unit3-01"/>
+    <link rel="manifest" href="/ICS2O-Unit3-01/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
