--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
+          src="./images/trapezoid.svg"
+          alt="trapezoid"
           width="25%"
           height="25%"
         />
